opam-version: "2.0"
name: "liqpack"
version: "0.1"
synopsis: "Package manager for liquidity of Tezos"
maintainer: "catsigma <im@catsigma.com>"
authors: "catsigma <im@catsigma.com>"
license: "MIT"
depends: [ "ocaml" "ocamlfind" "dune" ]
build: ["dune" "build" "--profile" "release" "src/liqpack.exe"]
