opam-version: "2.0"
name: "liquidpacker"
version: "0.1.6"
synopsis: "Package manager for liquidity of Tezos"
maintainer: "catsigma <im@catsigma.com>"
authors: "catsigma <im@catsigma.com>"
license: "MIT"
homepage: "https://github.com/catsigma/liquidpacker"
bug-reports: "https://github.com/catsigma/liquidpacker/issues"
dev-repo: "git+https://github.com/catsigma/liquidpacker.git"
depends: [ "ocaml" "ocamlfind" "dune" ]
build: ["dune" "build" "--profile" "release" "src/liquidpacker.exe"]
